apps/defectdojo/postgresql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: defectdojo-postgresql
  namespace: defectdojo
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: defectdojo
spec:
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: defectdojo
  ports:
    - port: 5432
      targetPort: 5432
