apps/defectdojo/virtual-service.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: defectdojo
  namespace: defectdojo
spec:
  hosts:
    - defectdojo.${INTERNAL_DOMAIN}
  gateways:
    - istio-ingress/sentinel-gateway
  http:
    - route:
        - destination:
            host: defectdojo-django.defectdojo.svc.cluster.local
            port:
              number: 80
